--- a/org.livingplace.controlling.actions.registry.impl/pom.xml
+++ b/org.livingplace.controlling.actions.registry.impl/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
@@ -42,14 +43,15 @@
       <artifactId>osgi_R4_compendium</artifactId>
       <optional>true</optional>
     </dependency>
+    <!-- Controlling Dependencies -->
     <dependency>
       <groupId>org.livingplace.bundles.controlling</groupId>
-      <artifactId>org.livingplace.controlling.actions.registry.api</artifactId>
+      <artifactId>org.livingplace.controlling.actions.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.livingplace.bundles.controlling</groupId>
-      <artifactId>org.livingplace.controlling.actions.api</artifactId>
+      <artifactId>org.livingplace.controlling.actions.registry.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <!-- Component Annotations Dependencies -->
