--- a/org.livingplace.controlling.informations.registry.impl/pom.xml
+++ b/org.livingplace.controlling.informations.registry.impl/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>org.livingplace.controlling.informations.registry.impl</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>${bundle.symbolicName} [${bundle.namespace}]</name>
+  <name>LivingPlace :: Controlling :: Informations :: Registry :: Provider</name>
 
   <packaging>bundle</packaging>
 
@@ -53,6 +53,30 @@
       <groupId>org.livingplace.bundles.controlling</groupId>
       <artifactId>org.livingplace.controlling.informations.registry.api</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!-- Component Annotations Dependencies -->
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr.annotations</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+    <!-- Testing Dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
