--- a/poms/compiled/pom.xml
+++ b/poms/compiled/pom.xml
@@ -81,7 +81,7 @@
             <!--
              | each module can override these defaults in their osgi.bnd file
             -->
-            <_include>osgi.bnd</_include>
+            <_include>-osgi.bnd</_include>
             <Service-Component>
               OSGI-INF/serviceComponents.xml
             </Service-Component>
