--- a/org.livingplace.controlling.knowledge.api/pom.xml
+++ b/org.livingplace.controlling.knowledge.api/pom.xml
@@ -60,11 +60,11 @@
     <!--<artifactId>commons-vfs2</artifactId>-->
     <!--<version>2.0</version>-->
     <!--</dependency>-->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>log4j</groupId>-->
+      <!--<artifactId>log4j</artifactId>-->
+      <!--<version>1.2.17</version>-->
+    <!--</dependency>-->
     <!--Drools Dependencies-->
     <dependency>
       <groupId>org.drools</groupId>
