--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -14,6 +14,12 @@
 
   <name>controlling - imported bundles</name>
   <properties>
+    <org.apache.felix.log.version>1.0.1</org.apache.felix.log.version>
+    <org.apache.felix.scr.version>1.6.0</org.apache.felix.scr.version>
+    <org.apache.felix.configadmin.version>1.4.0</org.apache.felix.configadmin.version>
+    <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
+    <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
+    <!-- Drools Dependencies -->
     <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
     <org.apache.servicemix.bundles.xstream.version>1.4.3_1</org.apache.servicemix.bundles.xstream.version>
     <org.apache.servicemix.bundles.protobuf-java.version>2.4.1_1</org.apache.servicemix.bundles.protobuf-java.version>
@@ -21,11 +27,7 @@
     <org.apache.servicemix.bundles.woodstox.version>3.2.9_3</org.apache.servicemix.bundles.woodstox.version>
     <org.apache.servicemix.bundles.antlr-runtime.version>3.4_2</org.apache.servicemix.bundles.antlr-runtime.version>
     <org.apache.servicemix.bundles.antlr.version>3.4_1</org.apache.servicemix.bundles.antlr.version>
-    <org.apache.felix.log.version>1.0.1</org.apache.felix.log.version>
-    <org.apache.felix.scr.version>1.6.0</org.apache.felix.scr.version>
-    <org.apache.felix.configadmin.version>1.4.0</org.apache.felix.configadmin.version>
-    <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
-    <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
+    <org.apache.servicemix.bundles.ant.version>1.8.4_1</org.apache.servicemix.bundles.ant.version>
   </properties>
 
   <packaging>pom</packaging>
@@ -64,7 +66,7 @@
       <version>${org.apache.felix.gogo.runtime.version}</version>
     </dependency>
 
-    <!-- Drools Dependencies -->
+     <!--Drools Dependencies-->
     <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.jaxb-xjc</artifactId>
@@ -99,6 +101,11 @@
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.antlr</artifactId>
       <version>${org.apache.servicemix.bundles.antlr.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.servicemix.bundles</groupId>
+      <artifactId>org.apache.servicemix.bundles.ant</artifactId>
+      <version>${org.apache.servicemix.bundles.ant.version}</version>
     </dependency>
   </dependencies>
 
