--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>org.livingplace.bundles</groupId>
@@ -13,6 +12,7 @@
   <artifactId>provision</artifactId>
 
   <name>controlling - imported bundles</name>
+
   <properties>
     <org.apache.felix.log.version>1.0.1</org.apache.felix.log.version>
     <org.apache.felix.scr.version>1.6.0</org.apache.felix.scr.version>
@@ -20,7 +20,6 @@
     <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
     <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
     <org.apache.felix.gogo.shell.version>0.10.0</org.apache.felix.gogo.shell.version>
-    <org.apache.felix.webconsole.version>4.0.0</org.apache.felix.webconsole.version>
     <!-- Drools Dependencies -->
     <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
     <org.apache.servicemix.bundles.xstream.version>1.4.3_1</org.apache.servicemix.bundles.xstream.version>
@@ -30,10 +29,10 @@
     <org.apache.servicemix.bundles.antlr-runtime.version>3.4_2</org.apache.servicemix.bundles.antlr-runtime.version>
     <org.apache.servicemix.bundles.antlr.version>3.4_1</org.apache.servicemix.bundles.antlr.version>
     <org.apache.servicemix.bundles.ant.version>1.8.4_1</org.apache.servicemix.bundles.ant.version>
-
   </properties>
 
   <packaging>pom</packaging>
+
   <!--
    | imported (non-local) bundles are listed here as dependencies
    | and will be deployed by pax:provision unless they are marked
@@ -52,17 +51,11 @@
       <artifactId>org.apache.felix.gogo.runtime</artifactId>
       <version>${org.apache.felix.gogo.runtime.version}</version>
     </dependency>
-
     <!-- Platform Provided OSGi Service implementations -->
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.log</artifactId>
       <version>${org.apache.felix.log.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.scr</artifactId>
-      <version>${org.apache.felix.scr.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
@@ -73,11 +66,6 @@
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.bundlerepository</artifactId>
       <version>${org.apache.felix.bundlerepository.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.webconsole</artifactId>
-      <version>${org.apache.felix.webconsole.version}</version>
     </dependency>
     <!--Drools Dependencies-->
     <dependency>
@@ -119,6 +107,42 @@
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.ant</artifactId>
       <version>${org.apache.servicemix.bundles.ant.version}</version>
+    </dependency>
+    <!-- Apache Webconsole -->
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.webconsole</artifactId>
+      <version>3.1.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <version>4.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.compendium</artifactId>
+      <version>4.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.shell</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.service.obr</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
