--- a/org.livingplace.controlling.informations.registry.api/pom.xml
+++ b/org.livingplace.controlling.informations.registry.api/pom.xml
@@ -35,14 +35,15 @@
     -->
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>osgi_R4_core</artifactId>
+      <artifactId>org.osgi.core</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>osgi_R4_compendium</artifactId>
+      <artifactId>org.osgi.compendium</artifactId>
       <optional>true</optional>
     </dependency>
+    <!--LP Controlling Dependencies-->
     <dependency>
       <groupId>org.livingplace.bundles.controlling</groupId>
       <artifactId>org.livingplace.controlling.informations.api</artifactId>
